<resources>
    <string name="app_name">Orgs</string>
    <string name="cesta_de_frutas">Cesta de Frutas</string>
    <string name="laranja_manga_e_uva">Laranja, manga e uva</string>
    <string name="title_activity_formulario_produto">FormularioProdutoActivity</string>
    <string name="nome">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="salvar">Salvar</string>
    <string name="frutas">Frutas</string>
    <string name="novo_produto">novo produto</string>
    <string name="Nome">Nome</string>
    <string name="frutas_diversas">Frutas diversas</string>
    <string name="Descricao">Descrição</string>
    <string name="Valor">Valor</string>
    <string name="carregar">Carregar</string>
    <string name="Carregar">Carregar</string>
    <string name="url_da_imagem">URL da imagem</string>
    <string name="fundo_da_lista_de_produtos">fundo da lista de produtos</string>
    <string name="imagem_do_produto">Imagem do produto</string>
    <string name="fundo_da_tela">Fundo da tela</string>
    <string name="botao_novo_produto">Botão Novo Produto</string>
    <string name="cadastrar_produto">Cadastrar produto</string>
    <string name="imagem_do_produto_layout">Imagem do produto</string>
    <string name="editar">Editar</string>
    <string name="imagem_descricao">Imagem Descricao</string>
    <string name="imagem_do_produto_detalhes">Imagem do produto</string>
    <string name="imagem_detalhes_produto">Imagem do produto</string>
    <string name="remover">Remover</string>
    <string name="ordenar">ordenar</string>
    <string name="nome_desc">nome desc</string>
    <string name="nome_asc">nome asc</string>
    <string name="descricao_desc">descricao desc</string>
    <string name="descricao_asc">descricao asc</string>
    <string name="valor_desc">valor desc</string>
    <string name="valor_asc">valor asc</string>
    <string name="sem_ordem">Sem ordem</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuário</string>
    <string name="cadastrar_usuario">cadastrar usuário</string>
    <string name="entrar">Entrar</string>
    <string name="orgs">Orgs</string>
    <string name="imagem_do_logo">imagem_do_logo</string>
    <string name="sair_do_app">sair_do_app</string>
    <string name="digite_o_nome_do_produto">Digite o nome do produto</string>
    <string name="buscar">Buscar</string>
    <string name="perfil_do_usuario">Perfil do usuário</string>
    <string name="textview">TextView</string>
    <string name="todos_os_produtos">Todos os produtos</string>
    <string name="produto_por_id_usuario">produto por id usuario</string>
</resources>