<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.FormularioProdutoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="18sp"
        android:textStyle="bold"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStartWithNavigation="0dp"
        app:title="@string/cadastrar_produto"
        app:titleMarginEnd="0dp"
        app:titleMarginTop="24dp"
        app:titleTextColor="?attr/colorOnPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/activity_formulario_produto_imagem"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:contentDescription="@string/frutas_diversas"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/montanha3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/formulario_produto_textinputlayout_nome"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_formulario_produto_usuario_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_formulario_produto_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Nome"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/formulario_produto_textinputlayout_descricao"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/formulario_produto_textinputlayout_nome">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_formulario_produto_descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Descricao"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/formulario_produto_textinputlayout_valor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/formulario_produto_textinputlayout_descricao">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_formulario_produto_valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Valor"
                    android:inputType="numberDecimal"
                    android:textLocale="pt_BR" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/activity_formulario_produto_botao_salvar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/salvar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/formulario_produto_textinputlayout_valor"
                app:layout_constraintVertical_bias="1" />

            <AutoCompleteTextView
                android:id="@+id/activity_formulario_produto_usuario_id"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:visibility="gone"
                android:hint="@string/produto_por_id_usuario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_formulario_produto_imagem"
                tools:text="usuarioId"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>