<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:titleMarginTop="24dp"
        app:titleTextColor="?attr/colorOnPrimary">

        <ImageButton
            android:id="@+id/botaoRemover"
            android:layout_width="28dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="14dp"
            android:src="@drawable/ic_action_del"
            android:contentDescription="@string/remover"
            android:background="@color/transparente"
            android:adjustViewBounds="true"
            android:clickable="true" />

        <ImageButton
            android:id="@+id/botaoEditar"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginVertical="14dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_action_edit"
            android:contentDescription="@string/editar"
            android:background="@color/transparente"
            android:adjustViewBounds="true"
            android:clickable="true" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.DetalhesProdutoActivity">

        <ImageView
            android:id="@+id/activity_detalhes_produto_imagem"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/imagem_detalhes_produto"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/activity_detalhes_produto_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_detalhes_produto_valor"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@tools:sample/lorem[10]" />

        <TextView
            android:id="@+id/activity_detalhes_produto_descricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintVertical_bias="0.0"
            android:gravity="top"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_detalhes_produto_nome"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/activity_detalhes_produto_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/plano_de_fundo_arredondado"
            android:elevation="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/activity_detalhes_produto_imagem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_detalhes_produto_imagem"
            tools:text="R$ 1299,99" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>